--- a/Ultimate-Techie/CreateAccount.html
+++ b/Ultimate-Techie/CreateAccount.html
@@ -12,7 +12,7 @@
         <h3>Time to vote for your favorite Techie, let's make this amazing.</h3>
         <form>
             <h4>Create an Account</h4>
-            <p>Have an account?<button><a href="/Login.html">Login</button></a></p>
+            <p>Have an account?<button><a href="Login.html">Login</button></a></p>
             <div class="btnn">
                 <button><img src="/Img/google (1).png">Continue with google</i></button>
             </div>
