--- a/Ultimate-Techie/Learn More.html
+++ b/Ultimate-Techie/Learn More.html
@@ -18,7 +18,7 @@
             <li><a href="#">Make a donation</a> </li>
         </ul>
         <div class="btns">
-            <button class="btn btn-primary"><a href="/Login.html">Log In</a></button>
+            <button class="btn btn-primary"><a href="Login.html">Log In</a></button>
             <button class="btn btn-secondary ml-1"><a href="CreateAccount.html">Create Account</a></button>
         </div>
     </nav>
