--- a/Ultimate-Techie/Login.html
+++ b/Ultimate-Techie/Login.html
@@ -13,7 +13,7 @@
             <h3>Let's pick up where we left off yeah?</h3>
             <form>
                 <h4>Log in to your account</h4>
-                <p>Don't have an account?<button><a href="/CreateAccount.html">Sign Up</a></button></p>
+                <p>Don't have an account?<button><a href="CreateAccount.html">Sign Up</a></button></p>
                 <div class="btnn">
                     <button><img src="/Img/google (1).png">Continue with google</i></button>
                 </div>
