--- a/Ultimate-Techie/index.html
+++ b/Ultimate-Techie/index.html
@@ -20,7 +20,7 @@
             <li><a href="#">Make a donation</a> </li>
         </ul>
         <div class="btns">
-            <button class="btn btn-primary"><a href="/Login.html">Log In</a></button>
+            <button class="btn btn-primary"><a href="Login.html">Log In</a></button>
             <button class="btn btn-secondary ml-1"><a href="CreateAccount.html">Create Account</a></button>
         </div>
     </nav>
@@ -73,7 +73,7 @@
                 <div class="col-right">
                     <h1>The Connected Awards</h1>
                     <p>The connected is.....It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-                    <button class="btn btn-secondary"><a href="/Learn More.html">Learn More</a></button>
+                    <button class="btn btn-secondary"><a href="Learn More.html">Learn More</a></button>
                 </div>
     
             </div>
